--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,39 +1,40 @@
-@import 'shared/variables.css';
-@import 'shared/fonts.css';
-@import 'shared/header.css';
-@import 'shared/buttons.css';
+@import "shared/variables.css";
+@import "shared/fonts.css";
+@import "shared/header.css";
+@import "shared/buttons.css";
+@import "shared/form.css";
 
 :root {
-  font-family: 'Gotham Rounded';
-  font-size: 20px;
-  color: var(--color-text-light);
+    font-family: "Gotham Rounded";
+    font-size: 20px;
+    color: var(--color-text-light);
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  background: linear-gradient(
-    to right,
-    var(--color-background-dark),
-    var(--color-background-light)
-  );
+    background: linear-gradient(
+        to right,
+        var(--color-background-dark),
+        var(--color-background-light)
+    );
 }
 
 .container {
-  max-width: 1200px;
-  margin: auto;
-  margin-bottom: 3rem;
+    max-width: 1200px;
+    margin: auto;
+    margin-bottom: 3rem;
 }
 
 .inner-container {
-  margin: 0 2rem;
+    margin: 0 2rem;
 }
 
 .page-header {
-  font-size: 2rem;
-  font-weight: 500;
+    font-size: 2rem;
+    font-weight: 500;
 }
