--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -17,7 +17,7 @@
     <script defer src="/javascripts/fileUpload.js"></script>
 
     <!-- My styles -->
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css">
     
     <title>MyLibrary</title>
 </head>
